# BestDiffTool

./: .gitignore  CMakeLists.txt  README.md  code_editor.cpp  code_editor.h  diff_engine.cpp  diff_engine.h  diff_text_delegate.cpp  diff_text_delegate.h  diff_types.h  intraline_diff.cpp  intraline_diff.h  main.cpp  mainwindow.cpp  mainwindow.h  text_io.cpp  text_io.h
